@@ -1,3 +1,11 @@
+2017-01-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Removing support of environment variable OPENVAS_GPGHOME.
+	This is too magic for its own good.
+
+	* base/gpgme_util.c (determine_gpghome, get_sysconf_gpghome): Do not
+	consider OPENVAS_GPGHOME anymore.
+
 2017-01-12  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* misc/openvas_logging.c: Fix typos in documentation.
